SERVER-82313 Uses proper TaskExecutor for canceling txn