src/mongo/db/commands/internal_transactions_test_command_d.cpp
@@ -69,6 +69,7 @@ public:
                     opCtx,
                     inlineExecutor,
                     sleepInlineExecutor,
+                    executor,
                     std::make_unique<txn_api::details::ClusterSEPTransactionClientBehaviors>(
                         opCtx->getServiceContext())));
         }
