src/mongo/db/s/sharding_ddl_util.cpp
@@ -913,6 +913,7 @@ void runTransactionOnShardingCatalog(OperationContext* opCtx,
             newOpCtx,
             inlineExecutor,
             sleepInlineExecutor,
+            executor,
             std::make_unique<txn_api::details::ClusterSEPTransactionClientBehaviors>(
                 newOpCtx->getServiceContext()));
     }();
